--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ numpy
 pandas
 scikit-learn
 nltk
-spacy
 PyPDF2
 sentence-transformers
+spacy
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0.tar.gz
