--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,4 @@ PyPDF2
 sentence-transformers
 spacy
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0.tar.gz
+torch==2.0.1
