--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,9 @@ scikit-learn
 nltk
 PyPDF2
 sentence-transformers
+transformers
 spacy
 torch
+matplotlib
+seaborn
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0.tar.gz
